--- a/plugins/Samptu303/index.html
+++ b/plugins/Samptu303/index.html
@@ -7,19 +7,18 @@
 
 <style>
   :root{
-    /* DARK FORCÉ */
-    --bg:#0b0d12;
-    --ink:#eef1f6;
-    --muted:rgba(238,241,246,.68);
-    --panel:#121621;
-    --panel2:#0f1320;
-    --line:rgba(255,255,255,.16);
-    --line2:rgba(255,255,255,.10);
-    --shadow:rgba(0,0,0,.55);
+    --bg:#e9eaec;
+    --ink:#111;
+    --muted:#666;
+    --panel:#f3f4f6;
+    --panel2:#edf0f3;
+    --line:rgba(0,0,0,.22);
+    --line2:rgba(0,0,0,.14);
+    --shadow:rgba(0,0,0,.08);
 
-    --stepOff:rgba(255,255,255,.08);
-    --playHead:rgba(255,255,255,.12);
-    --danger:#ff4b4b;
+    --stepOff:rgba(0,0,0,.08);
+    --playHead:rgba(0,0,0,.14);
+    --danger:#c01818;
   }
 
   *{ box-sizing:border-box; }
@@ -29,7 +28,6 @@
     font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial;
     background:var(--bg);
     color:var(--ink);
-    color-scheme: dark;
   }
 
   .wrap{
@@ -43,7 +41,7 @@
     border:1px solid var(--line);
     background:linear-gradient(180deg, var(--panel), var(--panel2));
     border-radius:14px;
-    box-shadow:0 14px 34px var(--shadow);
+    box-shadow:0 10px 26px var(--shadow);
   }
 
   .topbar{
@@ -94,22 +92,9 @@
     touch-action:manipulation;
   }
   .btn:active{ transform:translateY(1px); }
-  .btn.primary{ background:rgba(255,255,255,.06); }
-  .btn.danger{ border-color:rgba(255,75,75,.45); color:var(--danger); }
-
-  /* état ON = “allumé” (utilisé pour FX ouvert, Play en pause, etc.) */
-  .btn.on{
-    background:rgba(255,255,255,.10);
-    border-color:rgba(255,255,255,.22);
-    box-shadow: 0 0 0 2px rgba(255,255,255,.06), 0 10px 24px rgba(0,0,0,.35);
-  }
-
-  /* Accent spécifique pour le bouton FX quand ouvert */
-  .btn.fx-on{
-    background:rgba(80,160,255,.16);
-    border-color:rgba(80,160,255,.42);
-    box-shadow: 0 0 0 2px rgba(80,160,255,.12), 0 10px 26px rgba(0,0,0,.45);
-  }
+  .btn.primary{ background:rgba(0,0,0,.06); }
+  .btn.danger{ border-color:rgba(192,24,24,.35); color:var(--danger); }
+  .btn.on{ background:rgba(0,0,0,.08); }
 
   .led{
     display:flex;
@@ -118,14 +103,14 @@
     padding:10px 12px;
     border-radius:12px;
     border:1px solid var(--line);
-    background:rgba(255,255,255,.06);
+    background:rgba(255,255,255,.35);
     min-height:42px;
   }
   .led .digits{
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
     font-weight:900;
     letter-spacing:.12em;
-    background:rgba(255,255,255,.06);
+    background:rgba(0,0,0,.06);
     border:1px solid var(--line2);
     padding:8px 10px;
     border-radius:10px;
@@ -153,7 +138,7 @@
     padding:8px 10px;
     border:1px solid var(--line);
     border-radius:12px;
-    background:rgba(255,255,255,.05);
+    background:rgba(255,255,255,.25);
     min-width:170px;
   }
   .knob label{
@@ -165,7 +150,7 @@
     justify-content:space-between;
     gap:10px;
   }
-  .knob input[type="range"]{ width:100%; accent-color:#e6e9ef; }
+  .knob input[type="range"]{ width:100%; accent-color:#111; }
   .knob .val{
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Courier New", monospace;
     font-size:11px;
@@ -175,6 +160,7 @@
 
   .main{ padding:12px; }
 
+  /* --- TRACK ROWS (pad + steps aligned) --- */
   .tracks{
     display:flex;
     flex-direction:column;
@@ -182,10 +168,10 @@
   }
 
   .track{
-    --trk: rgba(255,255,255,.85);
+    --trk: rgba(0,0,0,.85); /* fallback */
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.04);
+    background:rgba(255,255,255,.18);
     padding:10px;
   }
 
@@ -199,7 +185,7 @@
   .padBox{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.04);
+    background:rgba(255,255,255,.22);
     padding:10px;
     display:flex;
     flex-direction:column;
@@ -213,7 +199,7 @@
     border-radius:14px;
     border:2px solid color-mix(in srgb, var(--trk) 55%, transparent);
     pointer-events:none;
-    opacity:.45;
+    opacity:.65;
   }
 
   .padTop{
@@ -243,7 +229,7 @@
     border:1px solid var(--line);
     border-radius:999px;
     padding:6px 8px;
-    background:rgba(255,255,255,.05);
+    background:rgba(255,255,255,.22);
     white-space:nowrap;
     font-size:11px;
     letter-spacing:.06em;
@@ -265,10 +251,9 @@
     user-select:none;
     touch-action:manipulation;
     position:relative;
-    color:var(--ink);
   }
   .padBtn:active{ transform:translateY(1px); }
-  .padBtn.on{ background: color-mix(in srgb, var(--trk) 14%, transparent); }
+  .padBtn.on{ background: color-mix(in srgb, var(--trk) 12%, transparent); }
 
   .padBtn .small{
     display:block;
@@ -278,7 +263,6 @@
     opacity:.75;
     margin-top:4px;
     text-transform:none;
-    color:var(--muted);
   }
 
   .miniRow{
@@ -290,7 +274,6 @@
   .tinyBtn{
     border:1px solid var(--line);
     background:transparent;
-    color:var(--ink);
     padding:8px 10px;
     border-radius:12px;
     font-size:11px;
@@ -300,7 +283,7 @@
     cursor:pointer;
     touch-action:manipulation;
   }
-  .tinyBtn.on{ background:rgba(255,255,255,.10); }
+  .tinyBtn.on{ background:rgba(0,0,0,.08); }
 
   .sctl{
     flex:1;
@@ -308,7 +291,7 @@
     border:1px solid var(--line);
     border-radius:12px;
     padding:8px 10px;
-    background:rgba(255,255,255,.04);
+    background:rgba(255,255,255,.20);
   }
   .sctl .row{
     display:flex;
@@ -331,7 +314,7 @@
   }
   .sctl input[type="range"]{
     width:100%;
-    accent-color:#e6e9ef;
+    accent-color:#111;
     touch-action: pan-y;
   }
 
@@ -340,7 +323,7 @@
     height:20px;
     border-radius:10px;
     border:1px solid var(--line2);
-    background:rgba(255,255,255,.03);
+    background:rgba(0,0,0,.03);
     overflow:hidden;
   }
   canvas.waveform-canvas{
@@ -349,10 +332,11 @@
     display:block;
   }
 
+  /* Steps */
   .stepsWrap{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.03);
+    background:rgba(255,255,255,.18);
     padding:10px;
     display:flex;
     flex-direction:column;
@@ -419,9 +403,9 @@
     transform:translateX(-50%);
     width:4px; height:4px;
     border-radius:50%;
-    background:rgba(255,255,255,.18);
+    background:rgba(0,0,0,.20);
   }
-  .step.on.beat::before{ background:rgba(0,0,0,.22); }
+  .step.on.beat::before{ background:rgba(255,255,255,.35); }
 
   /* FX panel */
   .fxPanel{ margin-top:12px; overflow:hidden; }
@@ -451,7 +435,7 @@
   .fxCard{
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.04);
+    background:rgba(255,255,255,.20);
     padding:10px;
   }
   .fxCardTop{
@@ -479,6 +463,7 @@
     margin-top:8px;
   }
 
+  /* Bottom */
   .bottomBar{
     margin-top:12px;
     display:flex;
@@ -488,14 +473,13 @@
     padding:10px;
     border:1px solid var(--line);
     border-radius:14px;
-    background:rgba(255,255,255,.03);
+    background:rgba(255,255,255,.18);
   }
   .patBtns{ display:flex; gap:6px; align-items:center; flex-wrap:wrap; }
   .patLabel{ font-size:11px; color:var(--muted); letter-spacing:.08em; text-transform:uppercase; }
   .patBtn{
     border:1px solid var(--line);
     background:transparent;
-    color:var(--ink);
     padding:8px 10px;
     border-radius:12px;
     font-size:11px;
@@ -505,7 +489,7 @@
     cursor:pointer;
     touch-action:manipulation;
   }
-  .patBtn.active{ background:rgba(255,255,255,.10); }
+  .patBtn.active{ background:rgba(0,0,0,.08); }
 
   .sectionTitle{
     font-size:11px;
@@ -517,7 +501,7 @@
 
   .loading-msg{
     position: fixed; inset: 0;
-    background: rgba(0,0,0,0.65);
+    background: rgba(0,0,0,0.55);
     display:flex; align-items:center; justify-content:center;
     z-index: 9000;
     font-weight:900;
@@ -582,7 +566,7 @@
           </div>
         </div>
 
-        <button id="fxToggleBtn" class="btn" aria-expanded="false">FX</button>
+        <button id="fxToggleBtn" class="btn">FX</button>
       </div>
     </div>
 
@@ -655,7 +639,7 @@
               <div class="fxCardTop">
                 <div>
                   <div class="fxName">Vinyl</div>
-                  <div class="fxSub">Crackle + warp</div>
+                  <div class="fxSub">Crackle + warp (wow+flutter)</div>
                 </div>
                 <button id="vinyl-bypass" class="btn">Off</button>
               </div>
@@ -832,7 +816,13 @@ let masterGain, filterNode, masterOut;
 
 let lofiScriptNode, tapeWaveshaper, tapeInputGain, tapeDryGain, tapeWetGain;
 let tapeWowOsc, tapeWowGain, tapeToneFilter;
-let vinylCrackleNode, vinylWarpOsc, vinylWarpGain, vinylDryGain, vinylWetGain;
+
+// Vinyl (realistic): crackle + wow+flutter => micro-delay modulation (NOT gain)
+let vinylCrackleNode, vinylCrackleGain;
+let vinylWowOsc, vinylWowGain;
+let vinylFlutterOsc, vinylFlutterGain;
+let vinylWarpDelay;
+let vinylDryGain, vinylWetGain;
 
 const FX = {
   lofiOn: false, tapeOn: false, vinylOn: false,
@@ -870,6 +860,7 @@ function initAudio() {
   masterOut = audioCtx.createGain();
   masterOut.gain.value = 0.85;
 
+  // --- LOFI (ScriptProcessor) ---
   lofiScriptNode = audioCtx.createScriptProcessor(512, 1, 1);
   lofiScriptNode.onaudioprocess = (e) => {
     const inp = e.inputBuffer.getChannelData(0);
@@ -889,6 +880,7 @@ function initAudio() {
     }
   };
 
+  // --- TAPE ---
   tapeInputGain = audioCtx.createGain();
   tapeWaveshaper = audioCtx.createWaveShaper();
   tapeWaveshaper.oversample = '4x';
@@ -908,6 +900,7 @@ function initAudio() {
   tapeDryGain = audioCtx.createGain();
   tapeWetGain = audioCtx.createGain();
 
+  // --- VINYL: crackle source ---
   const crackleBuffer = audioCtx.createBuffer(1, sr * 2, sr);
   const cbd = crackleBuffer.getChannelData(0);
   for (let i = 0; i < cbd.length; i++) {
@@ -916,21 +909,45 @@ function initAudio() {
   vinylCrackleNode = audioCtx.createBufferSource();
   vinylCrackleNode.buffer = crackleBuffer;
   vinylCrackleNode.loop = true;
-  const crackleGain = audioCtx.createGain();
-  vinylCrackleNode.connect(crackleGain);
 
-  vinylWarpOsc = audioCtx.createOscillator();
-  vinylWarpOsc.frequency.value = 0.5;
-  vinylWarpOsc.type = 'sine';
+  vinylCrackleGain = audioCtx.createGain();
+  vinylCrackleGain.gain.value = 0; // OFF by default
+  vinylCrackleNode.connect(vinylCrackleGain);
 
-  vinylWarpGain = audioCtx.createGain();
-  vinylWarpGain.gain.value = 0; 
-  vinylWarpOsc.connect(vinylWarpGain);
-  vinylWarpOsc.start();
+  // --- VINYL: wow + flutter -> micro delay time modulation ---
+  // Micro delay gives a pitch/time wobble WITHOUT volume pumping
+  vinylWarpDelay = audioCtx.createDelay(0.05);   // max 50ms
+  vinylWarpDelay.delayTime.value = 0.0075;       // base ~7.5ms (subtle)
+
+  // WOW (slow)
+  vinylWowOsc = audioCtx.createOscillator();
+  vinylWowOsc.type = 'sine';
+  vinylWowOsc.frequency.value = 0.35; // ~0.35Hz
+
+  vinylWowGain = audioCtx.createGain();
+  vinylWowGain.gain.value = 0; // scaled in updateFxGains
+  vinylWowOsc.connect(vinylWowGain);
+
+  // FLUTTER (fast, subtle)
+  vinylFlutterOsc = audioCtx.createOscillator();
+  vinylFlutterOsc.type = 'sine';
+  vinylFlutterOsc.frequency.value = 6.0; // ~6Hz
+
+  vinylFlutterGain = audioCtx.createGain();
+  vinylFlutterGain.gain.value = 0; // scaled in updateFxGains
+  vinylFlutterOsc.connect(vinylFlutterGain);
+
+  // Both to delayTime
+  vinylWowGain.connect(vinylWarpDelay.delayTime);
+  vinylFlutterGain.connect(vinylWarpDelay.delayTime);
+
+  vinylWowOsc.start();
+  vinylFlutterOsc.start();
 
   vinylDryGain = audioCtx.createGain();
   vinylWetGain = audioCtx.createGain();
 
+  // --- ROUTING ---
   const tapeOut = audioCtx.createGain();
   tapeOut.gain.value = 0.7;
 
@@ -946,16 +963,17 @@ function initAudio() {
   tapeDryGain.connect(tapeOut);
   tapeWetGain.connect(tapeOut);
 
+  // Vinyl mix stage
   const vinylOut = audioCtx.createGain();
   tapeOut.connect(vinylDryGain);
   tapeOut.connect(vinylWetGain);
+
   vinylDryGain.connect(vinylOut);
-  vinylWetGain.connect(vinylOut);
+  vinylWetGain.connect(vinylWarpDelay);
+  vinylWarpDelay.connect(vinylOut);
 
-  crackleGain.gain.value = FX.vinylcrackle * 0.04;
-  crackleGain.connect(vinylOut);
-
-  vinylWarpGain.connect(vinylOut.gain);
+  // Crackle injected but only audible when Vinyl ON (gain controlled)
+  vinylCrackleGain.connect(vinylOut);
 
   vinylOut.connect(masterOut);
   masterOut.connect(audioCtx.destination);
@@ -969,6 +987,7 @@ function initAudio() {
 function updateFxGains() {
   if (!tapeDryGain) return;
 
+  // TAPE
   if (FX.tapeOn) { tapeDryGain.gain.value = 1 - FX.tapemix; tapeWetGain.gain.value = FX.tapemix; }
   else { tapeDryGain.gain.value = 1; tapeWetGain.gain.value = 0; }
 
@@ -976,8 +995,36 @@ function updateFxGains() {
   tapeWaveshaper.curve = makeSatCurve(FX.tapedrive * 6);
   tapeWowGain.gain.value = FX.tapewow * 300;
 
-  if (FX.vinylOn) { vinylDryGain.gain.value = 1 - FX.vinylmix; vinylWetGain.gain.value = FX.vinylmix; }
-  else { vinylDryGain.gain.value = 1; vinylWetGain.gain.value = 0; }
+  // VINYL (realistic)
+  if (FX.vinylOn) {
+    vinylDryGain.gain.value = 1 - FX.vinylmix;
+    vinylWetGain.gain.value = FX.vinylmix;
+
+    // Depth mapping (seconds):
+    // - wow is bigger, slow
+    // - flutter is smaller, fast
+    // warp knob scales both (nonlinear for nicer response)
+    const w = Math.max(0, Math.min(1, FX.vinylwarp));
+    const warp = Math.pow(w, 1.2);
+
+    // base delay stays constant; modulation adds on top
+    // wow depth: up to ~2.2ms
+    vinylWowGain.gain.value = warp * 0.0022;
+
+    // flutter depth: up to ~0.35ms
+    vinylFlutterGain.gain.value = warp * 0.00035;
+
+    // crackle only when vinyl ON
+    if (vinylCrackleGain) vinylCrackleGain.gain.value = FX.vinylcrackle * 0.04;
+  } else {
+    vinylDryGain.gain.value = 1;
+    vinylWetGain.gain.value = 0;
+    if (vinylCrackleGain) vinylCrackleGain.gain.value = 0;
+
+    // no modulation when off
+    vinylWowGain.gain.value = 0;
+    vinylFlutterGain.gain.value = 0;
+  }
 }
 
 /* =========================================================================
@@ -1121,7 +1168,7 @@ function drawWaveform(padIdx, buffer) {
   const data = buffer.getChannelData(0);
   const step = Math.max(1, Math.floor(data.length / w));
 
-  ctx.strokeStyle = "rgba(230,233,239,.65)";
+  ctx.strokeStyle = "rgba(0,0,0,.55)";
   ctx.lineWidth = 1;
   ctx.beginPath();
   for (let x = 0; x < w; x++) {
@@ -1274,14 +1321,12 @@ function fillKick() {
    FX UI
    ========================================================================= */
 let fxAllBypass = false;
-
 function setFxButtonState(id, on){
   const b = document.getElementById(id);
   if (!b) return;
   b.textContent = on ? "On" : "Off";
   b.classList.toggle("on", on);
 }
-
 function applyFxFromUI(){
   FX.bits = +document.getElementById('bits').value;
   FX.srate = +document.getElementById('srate').value;
@@ -1309,7 +1354,6 @@ function applyFxFromUI(){
 
   if (audioCtx) updateFxGains();
 }
-
 function toggleFx(type){
   if (type === 'lofi') FX.lofiOn = !FX.lofiOn;
   if (type === 'tape') FX.tapeOn = !FX.tapeOn;
@@ -1329,7 +1373,7 @@ function toggleFx(type){
 }
 
 /* =========================================================================
-   BUILD TRACK UI
+   BUILD TRACK UI (pad + steps aligned)
    ========================================================================= */
 function buildTracks(){
   const root = document.getElementById('tracks');
@@ -1343,23 +1387,20 @@ function buildTracks(){
     const row = document.createElement('div');
     row.className = 'trackRow';
 
+    // LEFT: pad box
     const padBox = document.createElement('div');
     padBox.className = 'padBox';
 
     const padTop = document.createElement('div');
     padTop.className = 'padTop';
-
     const meta = document.createElement('div');
     meta.className = 'padMeta';
-
     const nm = document.createElement('div');
     nm.className = 'padName';
     nm.textContent = cfg.name;
-
     const tp = document.createElement('div');
     tp.className = 'padType';
     tp.textContent = cfg.type === 'sample' ? 'Sample' : 'Drum 808';
-
     meta.appendChild(nm);
     meta.appendChild(tp);
 
@@ -1386,13 +1427,11 @@ function buildTracks(){
     if (cfg.type === 'sample'){
       const wave = document.createElement('div');
       wave.className = 'wave';
-
       const canvas = document.createElement('canvas');
       canvas.id = `waveform-${padIdx}`;
       canvas.className = 'waveform-canvas';
       canvas.width = 260;
       canvas.height = 40;
-
       wave.appendChild(canvas);
       padBox.appendChild(wave);
 
@@ -1472,6 +1511,7 @@ function buildTracks(){
       }, { passive:false });
     }
 
+    // RIGHT: steps wrap
     const stepsWrap = document.createElement('div');
     stepsWrap.className = 'stepsWrap';
 
@@ -1552,19 +1592,6 @@ function fmtHz(v){
   return n >= 1000 ? (n/1000).toFixed(1) + "k" : String(Math.round(n));
 }
 
-function setFxUiOpen(isOpen){
-  const btn = document.getElementById('fxToggleBtn');
-  const body = document.getElementById('fxBody');
-  if (!btn || !body) return;
-  body.classList.toggle('open', isOpen);
-
-  // feedback visuel
-  btn.classList.toggle('on', isOpen);
-  btn.classList.toggle('fx-on', isOpen);
-  btn.setAttribute('aria-expanded', String(isOpen));
-  btn.textContent = isOpen ? 'FX On-Screen' : 'FX';
-}
-
 function wireUI(){
   document.getElementById('btnPlay').addEventListener('click', seqToggle);
   document.getElementById('btnStop').addEventListener('click', seqStop);
@@ -1574,14 +1601,9 @@ function wireUI(){
     seqStop();
   });
 
-  // FX TOGGLE (avec changement de couleur)
   const fxToggleBtn = document.getElementById('fxToggleBtn');
   const fxBody = document.getElementById('fxBody');
-  fxToggleBtn.addEventListener('click', () => {
-    const open = !fxBody.classList.contains('open');
-    setFxUiOpen(open);
-  });
-  setFxUiOpen(false); // masqué par défaut (et bouton “éteint”)
+  fxToggleBtn.addEventListener('click', () => fxBody.classList.toggle('open'));
 
   const tsBtn = document.getElementById('tsToggleBtn');
   const syncTsBtn = () => {
